menu image wrap fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -191,7 +191,6 @@ button.btn {
 	width: 100%;
 }
 .menu-item-image-wrap {
-	background-size: cover;
 	background-position: 9999% 9999%;
 }
 .not-spicy-icon.dietary-icon {
